--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -1,14 +1,7 @@
-.field {
+.section {
     display:flex;
-    flex-direction:row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap:10px;
-}
-
-.row {
-    display:flex;
-    flex-direction: row;
 }
 
 label {
