--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="container-fluid">
     <section class="section">
-      <div class="col">
+      <div class="col-sm-2 col-md-3">
         <div class="input-group mb-3">
           <button class="btn btn-outline-secondary" type="button">Print</button>
           <button class="btn btn-outline-secondary" type="button">CSV</button>
           <button class="btn btn-outline-secondary" type="button">Excel</button>
         </div>
       </div>
-      <div class="col">
+      <div class="col-sm-2 col-md-3">
         <div class="form-floating mb-3">
             <input type="date" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Start date</label>
