--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="container-fluid">
-    <section class="section">
+    <section class="section mt-3">
       <div class="col-sm-2 col-md-3">
         <div class="input-group mb-3">
           <button class="btn btn-outline-secondary" type="button">Print</button>
