--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -2,8 +2,23 @@
     display:flex;
     justify-content: space-between;
     align-items: center;
+    
 }
+
+.group {
+    
+    align-items: flex-end;
+}
+
+
 
 label {
     font-weight: 500;
+}
+
+@media  (max-width: 768px) {
+    .section {
+        display:flex;
+        flex-direction:column;
+    }
 }
