--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,88 +1,104 @@
 <div class="container">
   <div class="container-fluid">
     <section class="section mt-3">
-      <div class="col-sm-2 col-md-3">
-        <div class="input-group mb-3">
+      <div class="col-xs-1 col-sm-1 col-md-4">
+        <div class="input-group mt-3 mb-3">
           <button class="btn btn-outline-secondary" type="button">Print</button>
           <button class="btn btn-outline-secondary" type="button">CSV</button>
           <button class="btn btn-outline-secondary" type="button">Excel</button>
         </div>
       </div>
-      <div class="col-sm-2 col-md-3">
-        <div class="form-floating mb-3">
-            <input type="date" class="form-control" id="floatingInput" placeholder="name@example.com">
+      <div class="row group">
+        <div class="col-sm-1 col-md-6">
+          <div class="form-floating">
+            <input
+              type="date"
+              class="form-control"
+              id="floatingInput"
+              placeholder="name@example.com"
+            />
             <label for="floatingInput">Start date</label>
           </div>
+        </div>
+        <div class="col-sm-2 col-md-6">
           <div class="form-floating">
-            <input type="date" class="form-control" id="floatingPassword" placeholder="Password">
+            <input
+              type="date"
+              class="form-control"
+              id="floatingPassword"
+              placeholder="Password"
+            />
             <label for="floatingPassword">End date</label>
           </div>
+        </div>
       </div>
     </section>
   </div>
 
   <div class="container mt-3">
-    <table id="example" class="table table-striped">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Position</th>
-          <th>Office</th>
-          <th>Age</th>
-          <th>Start date</th>
-          <th>Salary</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Tiger Nixon</td>
-          <td>System Architect</td>
-          <td>Edinburgh</td>
-          <td>61</td>
-          <td>2011-04-25</td>
-          <td>$320,800</td>
-        </tr>
-        <tr>
-          <td>Garrett Winters</td>
-          <td>Accountant</td>
-          <td>Tokyo</td>
-          <td>63</td>
-          <td>2011-07-25</td>
-          <td>$170,750</td>
-        </tr>
-        <tr>
-          <td>Ashton Cox</td>
-          <td>Junior Technical Author</td>
-          <td>San Francisco</td>
-          <td>66</td>
-          <td>2009-01-12</td>
-          <td>$86,000</td>
-        </tr>
-        <tr>
-          <td>Cedric Kelly</td>
-          <td>Senior Javascript Developer</td>
-          <td>Edinburgh</td>
-          <td>22</td>
-          <td>2012-03-29</td>
-          <td>$433,060</td>
-        </tr>
-        <tr>
-          <td>Airi Satou</td>
-          <td>Accountant</td>
-          <td>Tokyo</td>
-          <td>33</td>
-          <td>2008-11-28</td>
-          <td>$162,700</td>
-        </tr>
-        <tr>
-          <td>Brielle Williamson</td>
-          <td>Integration Specialist</td>
-          <td>New York</td>
-          <td>61</td>
-          <td>2012-12-02</td>
-          <td>$372,000</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Position</th>
+            <th>Office</th>
+            <th>Age</th>
+            <th>Start date</th>
+            <th>Salary</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Tiger Nixon</td>
+            <td>System Architect</td>
+            <td>Edinburgh</td>
+            <td>61</td>
+            <td>2011-04-25</td>
+            <td>$320,800</td>
+          </tr>
+          <tr>
+            <td>Garrett Winters</td>
+            <td>Accountant</td>
+            <td>Tokyo</td>
+            <td>63</td>
+            <td>2011-07-25</td>
+            <td>$170,750</td>
+          </tr>
+          <tr>
+            <td>Ashton Cox</td>
+            <td>Junior Technical Author</td>
+            <td>San Francisco</td>
+            <td>66</td>
+            <td>2009-01-12</td>
+            <td>$86,000</td>
+          </tr>
+          <tr>
+            <td>Cedric Kelly</td>
+            <td>Senior Javascript Developer</td>
+            <td>Edinburgh</td>
+            <td>22</td>
+            <td>2012-03-29</td>
+            <td>$433,060</td>
+          </tr>
+          <tr>
+            <td>Airi Satou</td>
+            <td>Accountant</td>
+            <td>Tokyo</td>
+            <td>33</td>
+            <td>2008-11-28</td>
+            <td>$162,700</td>
+          </tr>
+          <tr>
+            <td>Brielle Williamson</td>
+            <td>Integration Specialist</td>
+            <td>New York</td>
+            <td>61</td>
+            <td>2012-12-02</td>
+            <td>$372,000</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
