--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -31,6 +31,10 @@
             <label for="floatingPassword">End date</label>
           </div>
         </div>
+        <div class="col">
+          <button class="btn btn-outline-secondary" type="button">Submit</button>
+        </div>
+        
       </div>
     </section>
   </div>
