--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -9,7 +9,7 @@
         </div>
       </div>
       <div class="row group">
-        <div class="col-sm-1 col-md-4">
+        <div class="col-sm-1 col-md-6">
           <div class="form-floating">
             <input
               type="date"
@@ -20,7 +20,7 @@
             <label for="floatingInput">Start date</label>
           </div>
         </div>
-        <div class="col-sm-2 col-md-4">
+        <div class="col-sm-2 col-md-6">
           <div class="form-floating">
             <input
               type="date"
@@ -30,11 +30,11 @@
             />
             <label for="floatingPassword">End date</label>
           </div>
-        </div>
-        <div class="col-sm-6 col-md-4 butn">
-          <button class="btn btn-outline-secondary py-2 px-4" type="button">Submit</button>
-        </div>
-        
+        </div>  
+      </div>
+
+      <div class="col-sm-6 col-md-3">
+        <button class="btn btn-outline-secondary butn mt-1" type="button">Submit</button>
       </div>
     </section>
   </div>
