--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -3,9 +3,9 @@
     <section class="section mt-3">
       <div class="col-xs-1 col-sm-1 col-md-4">
         <div class="input-group mt-3 mb-3">
-          <button class="btn btn-outline-secondary" type="button">Print</button>
-          <button class="btn btn-outline-secondary" type="button">CSV</button>
-          <button class="btn btn-outline-secondary" type="button">Excel</button>
+          <button class="btn btn-outline-warning" type="button">Print</button>
+          <button class="btn btn-outline-warning" type="button">CSV</button>
+          <button class="btn btn-outline-warning" type="button">Excel</button>
         </div>
       </div>
       <div class="row group">
@@ -34,7 +34,7 @@
       </div>
 
       <div class="col-sm-6 col-md-3">
-        <button class="btn btn-outline-secondary butn mt-1" type="button">Submit</button>
+        <button class="btn btn-outline-primary butn mt-1" type="button">Submit</button>
       </div>
     </section>
   </div>
