--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -3,39 +3,30 @@
     <section class="section mt-3">
       <div class="col-xs-1 col-sm-1 col-md-4">
         <div class="input-group mt-3 mb-3">
-          <button class="btn btn-outline-warning" type="button">Print</button>
-          <button class="btn btn-outline-warning" type="button">CSV</button>
-          <button class="btn btn-outline-warning" type="button">Excel</button>
+          <button class="btn btn-outline-primary" type="button">Print</button>
+          <button class="btn btn-outline-primary" type="button">CSV</button>
+          <button class="btn btn-outline-primary" type="button">Excel</button>
         </div>
       </div>
       <div class="row group">
-        <div class="col-sm-1 col-md-6">
+        <div class="col-sm-1 col-md-4 mb-1">
           <div class="form-floating">
-            <input
-              type="date"
-              class="form-control"
-              id="floatingInput"
-              placeholder="name@example.com"
-            />
+            <input type="date" class="form-control" id="floatingInput" placeholder="name@example.com" />
             <label for="floatingInput">Start date</label>
           </div>
         </div>
-        <div class="col-sm-2 col-md-6">
+        <div class="col-sm-2 col-md-4 mb-1">
           <div class="form-floating">
-            <input
-              type="date"
-              class="form-control"
-              id="floatingPassword"
-              placeholder="Password"
-            />
+            <input type="date" class="form-control" id="floatingPassword" placeholder="Password" />
             <label for="floatingPassword">End date</label>
           </div>
-        </div>  
+        </div>
+
+        <div class="col-sm-1 col-md-4 mb-1">
+          <button class="btn btn-outline-primary py-3 w-100" type="button">Submit</button>
+        </div>
       </div>
 
-      <div class="col-sm-6 col-md-3">
-        <button class="btn btn-outline-primary butn mt-1" type="button">Submit</button>
-      </div>
     </section>
   </div>
 
