--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -32,7 +32,7 @@
 
   <div class="container mt-3">
     <div class="table-responsive">
-      <table class="table table-striped">
+      <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions">
         <thead>
           <tr>
             <th>Name</th>
