--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+
+.dt-button {
+    background: #0d6efd !important;
+    color: white !important;
+    border: none ;
+    box-shadow: none !important;
+    border-radius: 10px;
+    padding: 7px;
+}
+
+.dt-button:focus, .dt-button:active {
+    background: white !important;
+    color: #0d6efd !important;
+    border: 1px solid #0d6efd !important;
+}
